Update package version to 1.1.0 and enhance tailwindVars.css with additional color variables for improved theming support. Modify updateMappingPluginV4 script to handle multiple CSS files and streamline output generation.

--- a/plugins/mappingColorSystemV4/tailwindVars.css
+++ b/plugins/mappingColorSystemV4/tailwindVars.css
@@ -273,4 +273,327 @@
   --color-background-presentation-button-fill-yellow-secondary: var(--background-presentation-button-fill-yellow-secondary);
   --color-background-presentation-button-fill-red-primary: var(--background-presentation-button-fill-red-primary);
   --color-background-presentation-button-fill-red-secondary: var(--background-presentation-button-fill-red-secondary);
+  --color-purple-100: var(--purple-100);
+  --color-purple-200: var(--purple-200);
+  --color-purple-300: var(--purple-300);
+  --color-purple-400: var(--purple-400);
+  --color-purple-500: var(--purple-500);
+  --color-purple-600: var(--purple-600);
+  --color-purple-700: var(--purple-700);
+  --color-purple-800: var(--purple-800);
+  --color-purple-900: var(--purple-900);
+  --color-purple-1000: var(--purple-1000);
+  --color-medium-red-100: var(--medium-red-100);
+  --color-medium-red-200: var(--medium-red-200);
+  --color-medium-red-300: var(--medium-red-300);
+  --color-medium-red-400: var(--medium-red-400);
+  --color-medium-red-500: var(--medium-red-500);
+  --color-medium-red-600: var(--medium-red-600);
+  --color-medium-red-700: var(--medium-red-700);
+  --color-medium-red-800: var(--medium-red-800);
+  --color-medium-red-900: var(--medium-red-900);
+  --color-medium-red-1000: var(--medium-red-1000);
+  --color-blue-sparkle-100: var(--blue-sparkle-100);
+  --color-blue-sparkle-200: var(--blue-sparkle-200);
+  --color-blue-sparkle-300: var(--blue-sparkle-300);
+  --color-blue-sparkle-400: var(--blue-sparkle-400);
+  --color-blue-sparkle-500: var(--blue-sparkle-500);
+  --color-blue-sparkle-600: var(--blue-sparkle-600);
+  --color-blue-sparkle-700: var(--blue-sparkle-700);
+  --color-blue-sparkle-800: var(--blue-sparkle-800);
+  --color-blue-sparkle-900: var(--blue-sparkle-900);
+  --color-blue-sparkle-1000: var(--blue-sparkle-1000);
+  --color-green-cyan-100: var(--green-cyan-100);
+  --color-green-cyan-200: var(--green-cyan-200);
+  --color-green-cyan-300: var(--green-cyan-300);
+  --color-green-cyan-400: var(--green-cyan-400);
+  --color-green-cyan-500: var(--green-cyan-500);
+  --color-green-cyan-600: var(--green-cyan-600);
+  --color-green-cyan-700: var(--green-cyan-700);
+  --color-green-cyan-800: var(--green-cyan-800);
+  --color-green-cyan-900: var(--green-cyan-900);
+  --color-green-cyan-1000: var(--green-cyan-1000);
+  --color-cool-green-100: var(--cool-green-100);
+  --color-cool-green-200: var(--cool-green-200);
+  --color-cool-green-300: var(--cool-green-300);
+  --color-cool-green-400: var(--cool-green-400);
+  --color-cool-green-500: var(--cool-green-500);
+  --color-cool-green-600: var(--cool-green-600);
+  --color-cool-green-700: var(--cool-green-700);
+  --color-cool-green-800: var(--cool-green-800);
+  --color-cool-green-900: var(--cool-green-900);
+  --color-orange-200: var(--orange-200);
+  --color-orange-300: var(--orange-300);
+  --color-orange-400: var(--orange-400);
+  --color-orange-500: var(--orange-500);
+  --color-orange-600: var(--orange-600);
+  --color-orange-700: var(--orange-700);
+  --color-orange-800: var(--orange-800);
+  --color-orange-900: var(--orange-900);
+  --color-yellow-200: var(--yellow-200);
+  --color-yellow-300: var(--yellow-300);
+  --color-yellow-400: var(--yellow-400);
+  --color-yellow-500: var(--yellow-500);
+  --color-yellow-600: var(--yellow-600);
+  --color-wavy-navy-100: var(--wavy-navy-100);
+  --color-wavy-navy-200: var(--wavy-navy-200);
+  --color-wavy-navy-300: var(--wavy-navy-300);
+  --color-wavy-navy-400: var(--wavy-navy-400);
+  --color-wavy-navy-500: var(--wavy-navy-500);
+  --color-wavy-navy-600: var(--wavy-navy-600);
+  --color-wavy-navy-700: var(--wavy-navy-700);
+  --color-wavy-navy-800: var(--wavy-navy-800);
+  --color-wavy-navy-900: var(--wavy-navy-900);
+  --color-wavy-navy-1000: var(--wavy-navy-1000);
+  --color-macaroon-rose-100: var(--macaroon-rose-100);
+  --color-macaroon-rose-200: var(--macaroon-rose-200);
+  --color-macaroon-rose-300: var(--macaroon-rose-300);
+  --color-macaroon-rose-400: var(--macaroon-rose-400);
+  --color-macaroon-rose-500: var(--macaroon-rose-500);
+  --color-macaroon-rose-600: var(--macaroon-rose-600);
+  --color-macaroon-rose-700: var(--macaroon-rose-700);
+  --color-macaroon-rose-800: var(--macaroon-rose-800);
+  --color-macaroon-rose-900: var(--macaroon-rose-900);
+  --color-sinoper-red-100: var(--sinoper-red-100);
+  --color-sinoper-red-200: var(--sinoper-red-200);
+  --color-sinoper-red-300: var(--sinoper-red-300);
+  --color-sinoper-red-400: var(--sinoper-red-400);
+  --color-sinoper-red-500: var(--sinoper-red-500);
+  --color-sinoper-red-600: var(--sinoper-red-600);
+  --color-sinoper-red-700: var(--sinoper-red-700);
+  --color-sinoper-red-800: var(--sinoper-red-800);
+  --color-sinoper-red-900: var(--sinoper-red-900);
+  --color-medium-violet-red-200: var(--medium-violet-red-200);
+  --color-medium-violet-red-300: var(--medium-violet-red-300);
+  --color-medium-violet-red-400: var(--medium-violet-red-400);
+  --color-medium-violet-red-500: var(--medium-violet-red-500);
+  --color-medium-violet-red-600: var(--medium-violet-red-600);
+  --color-medium-violet-red-700: var(--medium-violet-red-700);
+  --color-medium-violet-red-800: var(--medium-violet-red-800);
+  --color-medium-violet-red-900: var(--medium-violet-red-900);
+  --color-cocktail-green-200: var(--cocktail-green-200);
+  --color-cocktail-green-300: var(--cocktail-green-300);
+  --color-cocktail-green-400: var(--cocktail-green-400);
+  --color-cocktail-green-500: var(--cocktail-green-500);
+  --color-cocktail-green-600: var(--cocktail-green-600);
+  --color-cocktail-green-700: var(--cocktail-green-700);
+  --color-cocktail-green-800: var(--cocktail-green-800);
+  --color-cocktail-green-900: var(--cocktail-green-900);
+  --color-blue-purple-200: var(--blue-purple-200);
+  --color-blue-purple-300: var(--blue-purple-300);
+  --color-blue-purple-400: var(--blue-purple-400);
+  --color-blue-purple-500: var(--blue-purple-500);
+  --color-blue-purple-600: var(--blue-purple-600);
+  --color-blue-purple-700: var(--blue-purple-700);
+  --color-blue-purple-800: var(--blue-purple-800);
+  --color-blue-purple-900: var(--blue-purple-900);
+  --color-black-100: var(--black-100);
+  --color-white-00: var(--white-00);
+  --color-black-200: var(--black-200);
+  --color-black-300: var(--black-300);
+  --color-black-500: var(--black-500);
+  --color-black-400: var(--black-400);
+  --color-black-600: var(--black-600);
+  --color-black-700: var(--black-700);
+  --color-black-800: var(--black-800);
+  --color-black-900: var(--black-900);
+  --color-black-1000: var(--black-1000);
+  --color-white-25: var(--white-25);
+  --color-white-50: var(--white-50);
+  --color-white-100: var(--white-100);
+  --color-white-200: var(--white-200);
+  --color-white-300: var(--white-300);
+  --color-white-400: var(--white-400);
+  --color-white-500: var(--white-500);
+  --color-white-600: var(--white-600);
+  --color-white-700: var(--white-700);
+  --color-white-alpha-10: var(--white-alpha-10);
+  --color-white-alpha-15: var(--white-alpha-15);
+  --color-white-alpha-20: var(--white-alpha-20);
+  --color-white-alpha-30: var(--white-alpha-30);
+  --color-white-alpha-40: var(--white-alpha-40);
+  --color-white-alpha-50: var(--white-alpha-50);
+  --color-white-alpha-75: var(--white-alpha-75);
+  --color-black-alpha-10: var(--black-alpha-10);
+  --color-black-alpha-15: var(--black-alpha-15);
+  --color-black-alpha-20: var(--black-alpha-20);
+  --color-black-alpha-30: var(--black-alpha-30);
+  --color-black-alpha-40: var(--black-alpha-40);
+  --color-black-alpha-50: var(--black-alpha-50);
+  --color-black-alpha-75: var(--black-alpha-75);
+  --color-medium-red-alpha-10: var(--medium-red-alpha-10);
+  --color-medium-red-alpha-15: var(--medium-red-alpha-15);
+  --color-medium-red-alpha-20: var(--medium-red-alpha-20);
+  --color-medium-red-alpha-30: var(--medium-red-alpha-30);
+  --color-medium-red-alpha-40: var(--medium-red-alpha-40);
+  --color-medium-red-alpha-50: var(--medium-red-alpha-50);
+  --color-medium-red-alpha-75: var(--medium-red-alpha-75);
+  --color-purple-alpha-10: var(--purple-alpha-10);
+  --color-purple-alpha-15: var(--purple-alpha-15);
+  --color-purple-alpha-20: var(--purple-alpha-20);
+  --color-purple-alpha-30: var(--purple-alpha-30);
+  --color-purple-alpha-40: var(--purple-alpha-40);
+  --color-purple-alpha-50: var(--purple-alpha-50);
+  --color-purple-alpha-75: var(--purple-alpha-75);
+  --color-blue-sparkle-alpha-10: var(--blue-sparkle-alpha-10);
+  --color-blue-sparkle-alpha-15: var(--blue-sparkle-alpha-15);
+  --color-blue-sparkle-alpha-20: var(--blue-sparkle-alpha-20);
+  --color-blue-sparkle-alpha-30: var(--blue-sparkle-alpha-30);
+  --color-blue-sparkle-alpha-40: var(--blue-sparkle-alpha-40);
+  --color-blue-sparkle-alpha-50: var(--blue-sparkle-alpha-50);
+  --color-blue-sparkle-alpha-75: var(--blue-sparkle-alpha-75);
+  --color-cool-green-alpha-10: var(--cool-green-alpha-10);
+  --color-cool-green-alpha-15: var(--cool-green-alpha-15);
+  --color-cool-green-alpha-20: var(--cool-green-alpha-20);
+  --color-cool-green-alpha-30: var(--cool-green-alpha-30);
+  --color-cool-green-alpha-40: var(--cool-green-alpha-40);
+  --color-cool-green-alpha-50: var(--cool-green-alpha-50);
+  --color-cool-green-alpha-75: var(--cool-green-alpha-75);
+  --color-green-cyan-alpha-10: var(--green-cyan-alpha-10);
+  --color-green-cyan-alpha-15: var(--green-cyan-alpha-15);
+  --color-green-cyan-alpha-20: var(--green-cyan-alpha-20);
+  --color-green-cyan-alpha-30: var(--green-cyan-alpha-30);
+  --color-green-cyan-alpha-40: var(--green-cyan-alpha-40);
+  --color-green-cyan-alpha-50: var(--green-cyan-alpha-50);
+  --color-green-cyan-alpha-75: var(--green-cyan-alpha-75);
+  --color-yellow-alpha-10: var(--yellow-alpha-10);
+  --color-yellow-alpha-15: var(--yellow-alpha-15);
+  --color-yellow-alpha-20: var(--yellow-alpha-20);
+  --color-yellow-alpha-30: var(--yellow-alpha-30);
+  --color-yellow-alpha-40: var(--yellow-alpha-40);
+  --color-yellow-alpha-50: var(--yellow-alpha-50);
+  --color-yellow-alpha-75: var(--yellow-alpha-75);
+  --color-orange-alpha-10: var(--orange-alpha-10);
+  --color-orange-alpha-15: var(--orange-alpha-15);
+  --color-orange-alpha-20: var(--orange-alpha-20);
+  --color-orange-alpha-30: var(--orange-alpha-30);
+  --color-orange-alpha-40: var(--orange-alpha-40);
+  --color-orange-alpha-50: var(--orange-alpha-50);
+  --color-orange-alpha-75: var(--orange-alpha-75);
+  --color-white-alpha-5: var(--white-alpha-5);
+  --color-white-alpha-025: var(--white-alpha-025);
+  --color-black-alpha-5: var(--black-alpha-5);
+  --color-black-alpha-025: var(--black-alpha-025);
+  --color-yellow-700: var(--yellow-700);
+  --color-red-orange-100: var(--red-orange-100);
+  --color-red-orange-200: var(--red-orange-200);
+  --color-red-orange-300: var(--red-orange-300);
+  --color-red-orange-400: var(--red-orange-400);
+  --color-red-orange-500: var(--red-orange-500);
+  --color-red-orange-600: var(--red-orange-600);
+  --color-red-orange-700: var(--red-orange-700);
+  --color-red-orange-800: var(--red-orange-800);
+  --color-red-orange-900: var(--red-orange-900);
+  --color-red-orange-1000: var(--red-orange-1000);
+  --color-violet-100: var(--violet-100);
+  --color-violet-200: var(--violet-200);
+  --color-violet-300: var(--violet-300);
+  --color-violet-400: var(--violet-400);
+  --color-violet-500: var(--violet-500);
+  --color-violet-600: var(--violet-600);
+  --color-violet-700: var(--violet-700);
+  --color-violet-800: var(--violet-800);
+  --color-violet-900: var(--violet-900);
+  --color-violet-1000: var(--violet-1000);
+  --color-ocean-blue-200: var(--ocean-blue-200);
+  --color-ocean-blue-300: var(--ocean-blue-300);
+  --color-ocean-blue-400: var(--ocean-blue-400);
+  --color-ocean-blue-500: var(--ocean-blue-500);
+  --color-ocean-blue-600: var(--ocean-blue-600);
+  --color-ocean-blue-700: var(--ocean-blue-700);
+  --color-ocean-blue-800: var(--ocean-blue-800);
+  --color-ocean-blue-900: var(--ocean-blue-900);
+  --color-ocean-blue-1000: var(--ocean-blue-1000);
+  --color-yellow-800: var(--yellow-800);
+  --color-yellow-900: var(--yellow-900);
+  --color-yellow-950: var(--yellow-950);
+  --color-yellow-1000: var(--yellow-1000);
+  --color-yellow-50: var(--yellow-50);
+  --color-yellow-100: var(--yellow-100);
+  --color-purple-alpha-5: var(--purple-alpha-5);
+  --color-purple-alpha-3: var(--purple-alpha-3);
+  --color-black-950: var(--black-950);
+  --color-wavy-navy-alpha-025: var(--wavy-navy-alpha-025);
+  --color-wavy-navy-alpha-5: var(--wavy-navy-alpha-5);
+  --color-wavy-navy-alpha-10: var(--wavy-navy-alpha-10);
+  --color-wavy-navy-alpha-15: var(--wavy-navy-alpha-15);
+  --color-wavy-navy-alpha-20: var(--wavy-navy-alpha-20);
+  --color-wavy-navy-alpha-30: var(--wavy-navy-alpha-30);
+  --color-wavy-navy-alpha-40: var(--wavy-navy-alpha-40);
+  --color-wavy-navy-alpha-50: var(--wavy-navy-alpha-50);
+  --color-wavy-navy-alpha-75: var(--wavy-navy-alpha-75);
+  --color-wavy-navy-alpha-075: var(--wavy-navy-alpha-075);
+  --color-black-alpha-075: var(--black-alpha-075);
+  --color-white-alpha-075: var(--white-alpha-075);
+  --color-dark-navy-100: var(--dark-navy-100);
+  --color-dark-navy-200: var(--dark-navy-200);
+  --color-dark-navy-300: var(--dark-navy-300);
+  --color-dark-navy-400: var(--dark-navy-400);
+  --color-dark-navy-500: var(--dark-navy-500);
+  --color-dark-navy-600: var(--dark-navy-600);
+  --color-dark-navy-700: var(--dark-navy-700);
+  --color-dark-navy-800: var(--dark-navy-800);
+  --color-dark-navy-900: var(--dark-navy-900);
+  --color-dark-navy-1000: var(--dark-navy-1000);
+  --color-dark-navy-950: var(--dark-navy-950);
+  --color-macaroon-rose-1000: var(--macaroon-rose-1000);
+  --color-macaroon-rose-alpha-025: var(--macaroon-rose-alpha-025);
+  --color-macaroon-rose-alpha-5: var(--macaroon-rose-alpha-5);
+  --color-macaroon-rose-alpha-075: var(--macaroon-rose-alpha-075);
+  --color-macaroon-rose-alpha-10: var(--macaroon-rose-alpha-10);
+  --color-macaroon-rose-alpha-15: var(--macaroon-rose-alpha-15);
+  --color-macaroon-rose-alpha-20: var(--macaroon-rose-alpha-20);
+  --color-macaroon-rose-alpha-30: var(--macaroon-rose-alpha-30);
+  --color-macaroon-rose-alpha-40: var(--macaroon-rose-alpha-40);
+  --color-macaroon-rose-alpha-50: var(--macaroon-rose-alpha-50);
+  --color-macaroon-rose-alpha-75: var(--macaroon-rose-alpha-75);
+  --color-yellow-alpha-025: var(--yellow-alpha-025);
+  --color-yellow-alpha-5: var(--yellow-alpha-5);
+  --color-yellow-alpha-075: var(--yellow-alpha-075);
+  --color-orange-alpha-025: var(--orange-alpha-025);
+  --color-orange-alpha-5: var(--orange-alpha-5);
+  --color-orange-alpha-075: var(--orange-alpha-075);
+  --color-blue-sparkle-alpha-025: var(--blue-sparkle-alpha-025);
+  --color-blue-sparkle-alpha-5: var(--blue-sparkle-alpha-5);
+  --color-blue-sparkle-alpha-075: var(--blue-sparkle-alpha-075);
+  --color-medium-red-alpha-025: var(--medium-red-alpha-025);
+  --color-medium-red-alpha-5: var(--medium-red-alpha-5);
+  --color-medium-red-alpha-075: var(--medium-red-alpha-075);
+  --color-cool-green-alpha-025: var(--cool-green-alpha-025);
+  --color-cool-green-alpha-5: var(--cool-green-alpha-5);
+  --color-cool-green-alpha-075: var(--cool-green-alpha-075);
+  --color-green-cyan-alpha-025: var(--green-cyan-alpha-025);
+  --color-green-cyan-alpha-5: var(--green-cyan-alpha-5);
+  --color-green-cyan-alpha-075: var(--green-cyan-alpha-075);
+  --color-ocean-blue-alpha-025: var(--ocean-blue-alpha-025);
+  --color-ocean-blue-alpha-5: var(--ocean-blue-alpha-5);
+  --color-ocean-blue-alpha-075: var(--ocean-blue-alpha-075);
+  --color-ocean-blue-alpha-10: var(--ocean-blue-alpha-10);
+  --color-ocean-blue-alpha-15: var(--ocean-blue-alpha-15);
+  --color-ocean-blue-alpha-20: var(--ocean-blue-alpha-20);
+  --color-ocean-blue-alpha-30: var(--ocean-blue-alpha-30);
+  --color-ocean-blue-alpha-40: var(--ocean-blue-alpha-40);
+  --color-ocean-blue-alpha-50: var(--ocean-blue-alpha-50);
+  --color-ocean-blue-alpha-75: var(--ocean-blue-alpha-75);
+  --color-light-blue-00: var(--light-blue-00);
+  --color-light-blue-25: var(--light-blue-25);
+  --color-light-blue-50: var(--light-blue-50);
+  --color-light-blue-100: var(--light-blue-100);
+  --color-light-blue-200: var(--light-blue-200);
+  --color-light-blue-300: var(--light-blue-300);
+  --color-light-blue-400: var(--light-blue-400);
+  --color-light-blue-500: var(--light-blue-500);
+  --color-light-blue-600: var(--light-blue-600);
+  --color-light-blue-700: var(--light-blue-700);
+  --color-slate-50: var(--slate-50);
+  --color-slate-100: var(--slate-100);
+  --color-slate-200: var(--slate-200);
+  --color-slate-300: var(--slate-300);
+  --color-slate-400: var(--slate-400);
+  --color-slate-500: var(--slate-500);
+  --color-slate-600: var(--slate-600);
+  --color-slate-700: var(--slate-700);
+  --color-slate-800: var(--slate-800);
+  --color-slate-900: var(--slate-900);
+  --color-slate-950: var(--slate-950);
 }
